--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.0.1
 exceptiongroup==1.1.0
 h11==0.14.0
 idna==3.4
+loguru==0.6.0
 outcome==1.2.0
 packaging==23.0
 PySocks==1.7.1
