--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 exceptiongroup==1.1.0
 h11==0.14.0
+humanfriendly==10.0
 idna==3.4
 loguru==0.6.0
 outcome==1.2.0
